--- a/index.html
+++ b/index.html
@@ -1,38 +1,92 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>My Portfolio</title>
-    <style>
-        body { font-family: Arial, sans-serif; margin: 40px; background: #f5f5f5; }
-        header { text-align: center; }
-        h1 { color: #333; }
-        .section { margin: 40px 0; }
-        .card { background: white; padding: 20px; border-radius: 10px; box-shadow: 0 2px 5px rgba(0,0,0,0.1); }
-    </style>
+<meta charset="UTF-8">
+<title>Welcome – Yun-Ha</title>
+<style>
+    body {
+        font-family: Arial, sans-serif;
+        margin: 0;
+        background: linear-gradient(135deg, #74ebd5, #ACB6E5);
+        color: #333;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        height: 100vh;
+        text-align: center;
+    }
+
+    /* Container box */
+    .content-box {
+        background: white;
+        padding: 40px 60px;
+        border-radius: 15px;
+        box-shadow: 0 6px 15px rgba(0,0,0,0.2);
+        max-width: 600px;
+        width: 90%;
+        animation: fadeIn 1s ease forwards;
+    }
+
+    h1 {
+        font-size: 3em;
+        margin-bottom: 10px;
+        opacity: 0;
+        animation: fadeIn 1s ease forwards;
+        animation-delay: 0.2s;
+    }
+    p {
+        font-size: 1.2em;
+        margin-bottom: 40px;
+        opacity: 0;
+        animation: fadeIn 1s ease forwards;
+        animation-delay: 0.5s;
+    }
+    /* boxes */
+    .nav-links {
+        display: flex;
+        gap: 20px;
+        justify-content: center;
+    }
+    .nav-links a {
+        background: #f5f5f5;
+        padding: 15px 25px;
+        border-radius: 10px;
+        text-decoration: none;
+        color: #333;
+        font-weight: bold;
+        box-shadow: 0 3px 6px rgba(0,0,0,0.15);
+        transition: transform 0.2s ease, box-shadow 0.2s ease;
+        opacity: 0;
+        animation: fadeIn 1s ease forwards;
+    }
+    .nav-links a:nth-child(1) { animation-delay: 0.8s; }
+    .nav-links a:nth-child(2) { animation-delay: 1s; }
+    .nav-links a:nth-child(3) { animation-delay: 1.2s; }
+
+    .nav-links a:hover {
+        background-color: #8F7F7F;    /* new hover background */
+        color: white;                /* text becomes white */
+        transform: scale(1.2) rotate(5deg); /* grow + tilt */
+        box-shadow: 0 8px 16px rgba(0,0,0,0.3); /* deeper shadow */
+    }
+    
+    /*Fade in animation and slide up*/
+    @keyframes fadeIn {
+        from { opacity: 0; transform: translateY(20px); }
+        to { opacity: 1; transform: translateY(0); }
+    }
+</style>
 </head>
 <body>
-    <header>
-        <h1>Hi! I'm Yun-Ha!</h1>
-        <p>Up and coming data scientist</p>
-    </header>
-
-    <div class="section card">
-        <h2>About Me</h2>
-        <p>Biggest fan of the R coding language.</p>
-    </div>
-
-    <div class="section card">
-        <h2>Projects</h2>
-        <ul>
-            <li><a href="#">Project 1</a> – An AI Sentiment Analysis App using OpenAI</li>
-        </ul>
-    </div>
-
-    <div class="section card">
-        <h2>Contact</h2>
-        <p>Email: yunhakim702@gmail.com</p>
-        <p><a href="https://github.com/hahaitsyunha">GitHub</a></p>
+    <div class="content-box">
+        <h1>Yun-Ha Kim</h1>
+        <p>Wow! What is this?</p>
+        
+        <div class="nav-links">
+            <a href="about.html">About</a>
+            <a href="projects.html">Projects</a>
+            <a href="blog.html">Blog</a>
+        </div>
     </div>
 </body>
 </html>
