--- a/index.html
+++ b/index.html
@@ -2,91 +2,61 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Welcome – Yun-Ha</title>
+<title>Yun-Ha Kim</title>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&display=swap" rel="stylesheet">
 <style>
-    body {
-        font-family: Arial, sans-serif;
-        margin: 0;
-        background: linear-gradient(135deg, #74ebd5, #ACB6E5);
-        color: #333;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        height: 100vh;
-        text-align: center;
-    }
+    /* Reset */
+    * { margin: 0; padding: 0; box-sizing: border-box; }
 
-    /* Container box */
-    .content-box {
-        background: white;
-        padding: 40px 60px;
-        border-radius: 15px;
-        box-shadow: 0 6px 15px rgba(0,0,0,0.2);
-        max-width: 600px;
-        width: 90%;
-        animation: fadeIn 1s ease forwards;
+    body {
+        font-family: 'Poppins', sans-serif;
+        background: linear-gradient(135deg, #a1fda9, #fbc2c2);
+        background-size: 200% 200%;
+        min-height: 100vh;
+        display: flex;
+        flex-direction: column;
+        justify-content: center; /* center vertically */
+        align-items: center;     /* center horizontally */
+        text-align: center;
+        animation: gradientMove 20s ease infinite;
     }
 
     h1 {
-        font-size: 3em;
-        margin-bottom: 10px;
+        font-size: 6em; 
+        font-weight: 1000;
+        color: #1E90FF; 
+        margin-bottom: 20px;
         opacity: 0;
-        animation: fadeIn 1s ease forwards;
-        animation-delay: 0.2s;
+        animation: fadeIn 1.5s ease forwards;
     }
-    p {
-        font-size: 1.2em;
-        margin-bottom: 40px;
-        opacity: 0;
-        animation: fadeIn 1s ease forwards;
-        animation-delay: 0.5s;
-    }
-    /* boxes */
-    .nav-links {
-        display: flex;
-        gap: 20px;
-        justify-content: center;
-    }
-    .nav-links a {
-        background: #f5f5f5;
-        padding: 15px 25px;
-        border-radius: 10px;
-        text-decoration: none;
-        color: #333;
-        font-weight: bold;
-        box-shadow: 0 3px 6px rgba(0,0,0,0.15);
-        transition: transform 0.2s ease, box-shadow 0.2s ease;
-        opacity: 0;
-        animation: fadeIn 1s ease forwards;
-    }
-    .nav-links a:nth-child(1) { animation-delay: 0.8s; }
-    .nav-links a:nth-child(2) { animation-delay: 1s; }
-    .nav-links a:nth-child(3) { animation-delay: 1.2s; }
 
-    .nav-links a:hover {
-        background-color: #8F7F7F;    /* new hover background */
-        color: white;                /* text becomes white */
-        transform: scale(1.2) rotate(5deg); /* grow + tilt */
-        box-shadow: 0 8px 16px rgba(0,0,0,0.3); /* deeper shadow */
+    p {
+        font-size: 1.5em;
+        font-weight: 400;
+        color: #1E90FF; 
+        opacity: 0;
+        animation: fadeIn 1.5s ease forwards;
+        animation-delay: 0.5s;
+        max-width: 600px; /* width constraint so it looks more center */
+        margin: 0 auto;
     }
-    
-    /*Fade in animation and slide up*/
+
+    /* Fade in animation */
     @keyframes fadeIn {
         from { opacity: 0; transform: translateY(20px); }
         to { opacity: 1; transform: translateY(0); }
     }
+
+    /* Gradient movement */
+    @keyframes gradientMove {
+        0% { background-position: 0% 50%; }
+        50% { background-position: 100% 50%; }
+        100% { background-position: 0% 50%; }
+    }
 </style>
 </head>
 <body>
-    <div class="content-box">
-        <h1>Yun-Ha Kim</h1>
-        <p>Wow! What is this?</p>
-        
-        <div class="nav-links">
-            <a href="about.html">About</a>
-            <a href="projects.html">Projects</a>
-            <a href="blog.html">Blog</a>
-        </div>
-    </div>
+    <h1>Hi! I'm Yun-Ha.</h1>
+    <p>make it scroll down and have some projects. some blocks of my projects. embed youtube?</p>
 </body>
 </html>
